--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ricardo Medina Hernández"
-  avatar           : "profile.png"
+  avatar           : "IMG_9975.png"
   bio              : "Mechatronic Engineer"
   location         : "Guadalajara, Jalisco"
   employer         :
