--- a/_config.yml
+++ b/_config.yml
@@ -85,9 +85,7 @@ author:
   bio              : "Mechatronic Engineer"
   location         : "Guadalajara, Jalisco"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "rmedinaco01@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
