--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,14 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Work Experience"
+    url: /workexperience/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Professional Achievements"
+    url: /professionalachievements/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Personal Projects"
+    url: /personalprojects/    
     
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
