--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Ricardo Medina"
 title_separator          : "-"
 name                     : &name "Ricardo Medina Hernández"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/RicardoMedina" # the subpath of your site, e.g. "/blog"
+url                      : https://ricardomh01.github.io/RicardoMedina.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
